--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "google-auth-library": "^10.5.0",
+    "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.3",
-    "multer": "^2.0.2"
+    "midtrans-client": "^1.4.3",
+    "multer": "^2.0.2",
+    "nodemailer": "^7.0.13"
   },
   "devDependencies": {
     "nodemon": "^3.1.10",
